# q3now

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  BUILD-RUST.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  MERGE_PLAN.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  TODOS.md  WASM.md  WIREDNET_RENAME_AUDIT.md  crash_20260514_172821.dmp  crash_20260514_173054.dmp  frag.spv  id-readme.txt  last-upstream-commit.txt  make-macosx-app.sh  make-macosx-ub2.sh  make-pak.sh  prompt.txt  q3now-mod-todo.txt  sync-upstream.sh
.claude/: settings.json
.claude/agents/: noskills-executor.md
.eser/: manifest.yml
.eser/concerns/: move-fast.json
.github/workflows/: audio-test.yml  build.yml  delete-release.yml
LICENSES/: LicenseRef-CWI.txt  LicenseRef-public-domain.txt
assets/_sources/: attributions.txt
assets/fonts/: README.md  charset_console.txt  charset_latin.txt
cmake/: basegame.cmake  format_check.cmake  identity.cmake
cmake/utils/: qvm_tools.cmake  wasm_tools.cmake
code/asm/: qasm.h
code/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_gen.h  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  (+22 more)
code/cgame/: cg_alloc.c  cg_atmospheric.c  cg_characters.c  cg_chatfilter.c  cg_colorparse.c  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_lensflare.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_modern_private.h  cg_moderntext.c  cg_newdraw.c  cg_ospcompat.c  cg_osptext.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_playlist.c  cg_predict.c  cg_public.h  cg_q1_particles.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_superhud.c  cg_superhud_configparser.c  cg_superhud_element_ammomessage.c  cg_superhud_element_chat.c  cg_superhud_element_flagstatus.c  cg_superhud_element_followmessage.c  cg_superhud_element_fps.c  cg_superhud_element_fragmessage.c  (+51 more)
code/client/: cl_avi.c  cl_bsp_preview.c  cl_cgame.c  cl_characters.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_input.c  cl_jpeg.c  cl_keys.c  cl_loading_theme.c  cl_loading_ui.c  cl_main.c  cl_mapinfo.c  cl_net_chan.c  cl_net_stats.c  cl_parse.c  cl_scrn.c  cl_ui.c  cl_wired_feeders.c  cl_wired_fonts.c  cl_wired_fonts.h  cl_wired_hud.c  cl_wired_hud.h  cl_wired_parse.c  cl_wired_ui.c  cl_wired_ui.h  client.h  keycodes.h  keys.h  miniaudio.h  snd_adpcm.c  snd_codec.c  snd_codec.h  snd_codec_init.c  snd_codec_ogg.c  snd_codec_opus.c  snd_codec_wav.c  snd_dma.c  (+9 more)
code/game/: ai_aware.c  ai_aware.h  ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_dodge.c  ai_dodge.h  ai_itemtime.c  ai_itemtime.h  ai_main.c  ai_main.h  ai_movement.c  ai_movement.h  ai_team.c  ai_team.h  ai_vcmd.c  ai_vcmd.h  ai_weapsel.c  ai_weapsel.h  bg_gametypes.c  bg_lib.c  bg_local.h  bg_misc.c  bg_pmove.c  bg_promode.c  bg_promode.h  bg_public.h  bg_slidemove.c  bg_tracemap.c  bg_weapons.c  chars.h  g_active.c  g_arenas.c  g_bot.c  g_bot_lua.c  (+37 more)
code/macosx/: macosx_main.c
code/q3_ui/: ui_addbots.c  ui_atoms.c  ui_callvote.c  ui_controls2.c  ui_demo2.c  ui_display.c  ui_dynamicmenu.c  ui_gameinfo.c  ui_ingame.c  ui_local.h  ui_main.c  ui_mapcache.c  ui_menu.c  ui_mfield.c  ui_mods.c  ui_playermodel.c  ui_players.c  ui_playersettings.c  ui_preferences.c  ui_qmenu.c  ui_removebots.c  ui_script.c  ui_serverinfo.c  ui_servers2.c  ui_sparena.c  ui_splevel.c  ui_sppostgame.c  ui_startserver.c  ui_team.c  ui_teamorders.c
code/qcommon/: arena.c  arena.h  asset_load_log.c  asset_load_log.h  bsp.c  bsp.h  bsp_q3.c  cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_q1.c  cm_test.c  cm_trace.c  cmd.c  common.c  crash.c  crash.h  crypto.c  crypto.h  cvar.c  event.c  event.h  files.c  files_pack.h  help.c  history.c  huffman.c  huffman_static.c  json.h  keys.c  log.c  log.h  log_sink_console.c  log_sink_tty.c  md4.c  md5.c  (+27 more)
code/renderer/: iqm.h  qgl.h  tr_animation.c  tr_arb.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_spearmint.c  tr_surface.c  tr_vbo.c  tr_world.c
code/renderer2/: glext.h  qgl.h  stringify.c  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_dsa.c  tr_dsa.h  tr_extensions.c  tr_extramath.c  tr_extramath.h  tr_extratypes.h  tr_fbo.c  tr_fbo.h  tr_flares.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_light.c  (+18 more)
code/tools/shader_xlate_spike/: CMakeLists.txt  README.md  main.cpp
docker/: docker-compose.yml  entrypoint.sh
docs/: wired-ui.md
launcher/: app.go  console_other.go  console_windows.go  embed.go  errors.go  eula.go  go.mod  go.sum  main.go  wails.json  wails_reporter.go
modfiles/: autoexec.cfg  config_server.cfg  default.cfg  description.txt  eser.cfg  gfx.cfg  q3config_server.cfg  q3now.cfg
pakfiles/: pak0.pk3
tests/: nav_coord_test.c  run-quic-server.sh  smoke-fs-dedup.sh  smoke-quic-game.sh  smoke-wasm.sh  smoke.sh  test_quic_client.py
tools/: audio_latency_benchmark.md  audio_manual_test_plan.md  check_audio_callback.sh  font-weight-transform.py  gen_test_dds.py  hal-to-ral-rename.mjs  measure_audio_latency.sh
tools/extract-meta/: CMakeLists.txt  asset_resolve.c  asset_resolve.h  bsp_inventory.c  bsp_inventory.h  category_map.c  category_map.h  ent_emit.c  ent_emit.h  main.c  meta_emit.c  meta_emit.h  shader_index.c  shader_index.h  stubs.c  tool_init.c
(+954 files in other folders)
